--- a/styles.css
+++ b/styles.css
@@ -221,7 +221,7 @@ html, body {
     width: 100%;
     text-align: center;
     font-weight: bold;
-    font-size: 2.5em;
+    font-size: 1.75em;
     color: #333;
     margin-bottom: 25px;
 }
@@ -234,8 +234,8 @@ html, body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     object-fit: cover;
 }
 
@@ -255,9 +255,10 @@ html, body {
     width: 100%;
     text-align: center;
     font-weight: bold;
-    font-size: 1.75em;
+    font-size: 1.25em;
     color: #333;
     margin-bottom: 15px;
+    margin-top: 15px;
 }
 
 .shop-items {
